--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0 shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
       rel="stylesheet"
@@ -43,8 +40,6 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  @media (max-width: 768px) { /* Styles for screens smaller than 768px */ }
-  @media (max-width: 480px) { /* Styles for screens smaller than 480px */ }
 
   <body>
     <section>
@@ -66,7 +61,7 @@
                 aria-expanded="false"
                 aria-label="Toggle navigation"
               >
-                <span class="navbar-toggler-icon"></span>
+              <i class="fa fa-bars"></i>
               </button>
 
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -130,7 +125,7 @@
           </div>
           <div class="row gy-4 mt-5 justify-content-center">
             <div
-              class="col-xl-2 col-md-4"
+              class="col-xl-2 col-md-4 col-sm-12 mb-lg-0 mb-3"
               data-aos="fade-up"
               data-aos-duration="2000"
             >
@@ -140,7 +135,7 @@
               </div>
             </div>
             <div
-              class="col-xl-2 col-md-4"
+              class="col-xl-2 col-md-4 mb-lg-0 mb-3"
               data-aos="fade-up"
               data-aos-duration="2000"
             >
@@ -150,7 +145,7 @@
               </div>
             </div>
             <div
-              class="col-xl-2 col-md-4"
+              class="col-xl-2 col-md-4 mb-lg-0 mb-3"
               data-aos="fade-up"
               data-aos-duration="2000"
             >
@@ -160,7 +155,7 @@
               </div>
             </div>
             <div
-              class="col-xl-2 col-md-4"
+              class="col-xl-2 col-md-4 mb-lg-0 mb-3"
               data-aos="fade-up"
               data-aos-duration="2000"
             >
@@ -170,7 +165,7 @@
               </div>
             </div>
             <div
-              class="col-xl-2 col-md-4"
+              class="col-xl-2 col-md-4 mb-lg-0 mb-3"
               data-aos="fade-up"
               data-aos-duration="2000"
             >
@@ -187,7 +182,11 @@
     <section class="mar">
       <div class="container">
         <div class="row">
-          <div class="col-6" data-aos="zoom-in-right" data-aos-duration="3000">
+          <div
+            class="col-xl-6 col-sm-12"
+            data-aos="zoom-in-right"
+            data-aos-duration="3000"
+          >
             <h3>
               Voluptatem dignissimos provident quasi corporis voluptates sit
               assumenda.
@@ -211,13 +210,16 @@
               proident
             </p>
           </div>
-          <div class="col-6" data-aos="zoom-in-left" data-aos-duration="3000">
+          <div
+            class="col-xl-6 col-sm-12"
+            data-aos="zoom-in-left"
+            data-aos-duration="3000"
+          >
             <img
               class="about-bg"
               src="./Assests/img/about.jpg"
               alt=""
-              width="92%"
-              height="112%"
+              width="100%"
             />
           </div>
         </div>
@@ -293,10 +295,18 @@
     <section class="mar">
       <div class="container">
         <div class="row">
-          <div class="col-6" data-aos="zoom-in-left" data-aos-duration="3000">
+          <div
+            class="col-xl-6 col-sm-12 w-100"
+            data-aos="zoom-in-left"
+            data-aos-duration="3000"
+          >
             <img class="img-feature" src="./Assests/img/features.jpg" alt="" />
           </div>
-          <div class="col-6" data-aos="zoom-in-left" data-aos-duration="3000">
+          <div
+            class="col-xl-6 col-sm-12"
+            data-aos="zoom-in-left"
+            data-aos-duration="3000"
+          >
             <i class="fa fa-receipt size"></i>
             <h6>Est labore ad</h6>
             <p>
@@ -337,7 +347,7 @@
           <h1>CHECK OUR SERVICES</h1>
         </div>
         <div class="row">
-          <div class="col-4 ipsum">
+          <div class="col-xl-4 col-sm-12 ipsum">
             <div class="box-around">
               <i class="fab fa-dribbble boxx"></i>
               <br />
@@ -348,7 +358,7 @@
               </p>
             </div>
           </div>
-          <div class="col-4 ipsum">
+          <div class="col-xl-4 col-sm-12 ipsum">
             <div class="box-around">
               <i class="far fa-file-alt boxx"></i>
               <br />
@@ -359,7 +369,7 @@
               </p>
             </div>
           </div>
-          <div class="col-4 ipsum">
+          <div class="col-xl-4 col-sm-12 ipsum">
             <div class="box-around">
               <i class="fas fa-warehouse boxx"></i>
               <br />
@@ -370,7 +380,7 @@
               </p>
             </div>
           </div>
-          <div class="col-4 ipsum">
+          <div class="col-xl-4 col-sm-12 ipsum">
             <div class="box-around">
               <i class="fa fa-globe-asia boxx"></i>
               <br />
@@ -381,7 +391,7 @@
               </p>
             </div>
           </div>
-          <div class="col-4 ipsum">
+          <div class="col-xl-4 col-sm-12 ipsum">
             <div class="box-around">
               <i class="far fa-folder-open boxx"></i>
               <br />
@@ -392,7 +402,7 @@
               </p>
             </div>
           </div>
-          <div class="col-4 ipsum">
+          <div class="col-xl-4 col-sm-12 ipsum">
             <div class="box-around">
               <i class="fas fa-trophy boxx"></i>
               <br />
@@ -409,7 +419,7 @@
     <!-- page-4 -->
     <!-- page-5 -->
     <section class="mar">
-      <div class="bg-image-5">
+      <div class="bg-image-5 w-100">
         <div class="container">
           <div class="page-5">
             <h3>Call To Action</h3>
@@ -420,8 +430,8 @@
               anim id est laborum.
             </p>
           </div>
-          <div class="cent">
-            <button class="btn my-2 my-sm-0" type="submit">
+          <div class="cent mb-xl-0 mb-sm-3">
+            <button class="btn" type="submit">
               <span class="butt-5">Call To Action</span>
             </button>
           </div>
@@ -437,7 +447,7 @@
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
             <button
-              class="nav-link active"
+              class="nav-link active btn-warn"
               id="pills-home-tab"
               data-toggle="pill"
               data-target="#pills-home"
@@ -451,7 +461,7 @@
           </li>
           <li class="nav-item" role="presentation">
             <button
-              class="nav-link"
+              class="nav-link btn-warn"
               id="pills-profile-tab"
               data-toggle="pill"
               data-target="#pills-profile"
@@ -465,7 +475,7 @@
           </li>
           <li class="nav-item" role="presentation">
             <button
-              class="nav-link"
+              class="nav-link btn-warn"
               id="pills-contact-tab"
               data-toggle="pill"
               data-target="#pills-contact"
@@ -479,7 +489,7 @@
           </li>
           <li class="nav-item" role="presentation">
             <button
-              class="nav-link"
+              class="nav-link btn-warn"
               id="pills-web-tab"
               data-toggle="pill"
               data-target="#pills-web"
@@ -492,7 +502,7 @@
             </button>
           </li>
         </ul>
-        <div class="tab-content" id="pills-tabContent">
+        <div class="tab-content  text-center" id="pills-tabContent">
           <div
             class="tab-pane fade show active"
             id="pills-home"
@@ -681,11 +691,19 @@
     <section class="mar">
       <div class="container">
         <div class="row">
-          <div class="col-5" data-aos="fade-right" data-aos-duration="3000">
+          <div
+            class="col-xl-5 col-sm-12"
+            data-aos="fade-right"
+            data-aos-duration="3000"
+          >
             <img class="img-counts" src="./Assests/img/counts-img.jpg" alt="" />
           </div>
 
-          <div class="col-7" data-aos="fade-left" data-aos-duration="3000">
+          <div
+            class="col-xl-7 col-sm-12"
+            data-aos="fade-left"
+            data-aos-duration="3000"
+          >
             <h2>Voluptatem dignissimos provident quasi</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -824,7 +842,7 @@
     </section>
     <!-- page-8 -->
     <!-- page-9 -->
-    <section class="mar">
+    <section class="mar team">
       <div class="container">
         <div>
           <h6 class="line">TEAM</h6>
@@ -882,102 +900,107 @@
     <!-- page-10 -->
     <section class="mar">
       <div class="container">
-        <div>
-          <h6 class="line">CONTACT</h6>
-          <h1>CONTACT US</h1>
-        </div>
-        <div class="maps">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14684.058428806367!2d72.65058415!3d23.059926049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1688621987668!5m2!1sen!2sin"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <div class="row">
-          <div class="col-xl-4 col-lg-4 col-md-4 col-12 col-sm-12">
-            <div class="p-4">
-              <div class="flex-card">
-                <i class="fas fa-map-pin boxxx"></i>
-                <div class="ml-3">
-                  <h4 class="p-0 m-0">Location:</h4>
-                  <p class="p-0 m-0">A108 Adam Street, New York, NY 535022</p>
-                </div>
-              </div>
-            </div>
-            <div class="p-4">
-              <div class="flex-card">
-                <i class="fa fa-envelope boxxx"></i>
-                <div class="ml-3">
-                  <h4 class="p-0 m-0">Email:</h4>
-                  <p class="p-0 m-0">info@example.com</p>
-                </div>
-              </div>
-            </div>
-            <div class="p-4">
-              <div class="flex-card mr-5">
-                <i class="fa fa-mobile boxxx"></i>
-                <div class="ml-3">
-                  <h4 class="p-0 m-0">Call:</h4>
-                  <p class="p-0 m-0">+1 5589 55488 55s</p>
-                </div>
-              </div>
-            </div>
+        <div class="">
+          <div class="col-12">
+            <h6 class="line">CONTACT</h6>
+            <h1>CONTACT US</h1>
           </div>
-          <div class="col-xl-8 col-lg-8 col-md-8 col-12 col-sm-12">
-            <form>
-              <div class="row mt-4">
-                <div class="col-6">
-                  <div class="form-group">
-                    <input
-                      type="text"
-                      placeholder="Your Name"
-                      class="form-control"
-                      id="exampleInputEmail1"
-                      aria-describedby="Name"
-                    />
+          <div class="col-12">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14684.058428806367!2d72.65058415!3d23.059926049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1688621987668!5m2!1sen!2sin"
+              style="border: 0"
+              width="100%"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-12 col-sm-12">
+              <div class="p-4">
+                <div class="flex-card center">
+                  <i class="fas fa-map-pin boxxx"></i>
+                  <div class="ml-3">
+                    <h4 class="p-0 m-0">Location:</h4>
+                    <p class="p-0 m-0">A108 Adam Street, New York, NY 535022</p>
                   </div>
-                </div>
-                <div class="col-6">
-                  <div class="form-group">
-                    <input
-                      type="email"
-                      placeholder="Your Email"
-                      class="form-control"
-                      id="exampleInputEmail1"
-                      aria-describedby="emailHelp"
-                    />
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-group">
-                    <input
-                      type="text"
-                      placeholder="Subject"
-                      class="form-control"
-                      id="exampleInputEmail1"
-                      aria-describedby="subject"
-                    />
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-group">
-                    <textarea
-                      name="Message"
-                      placeholder="Message"
-                      cols="96"
-                      rows="5"
-                    ></textarea>
-                  </div>
-                </div>
-                <div class="col-12 text-center">
-                  <button type="submit" class="btn btn-warning">
-                    Send Message
-                  </button>
                 </div>
               </div>
-            </form>
+              <div class="p-4">
+                <div class="flex-card">
+                  <i class="fa fa-envelope boxxx"></i>
+                  <div class="ml-3">
+                    <h4 class="p-0 m-0">Email:</h4>
+                    <p class="p-0 m-0">info@example.com</p>
+                  </div>
+                </div>
+              </div>
+              <div class="p-4">
+                <div class="flex-card mr-5">
+                  <i class="fa fa-mobile boxxx"></i>
+                  <div class="ml-3">
+                    <h4 class="p-0 m-0">Call:</h4>
+                    <p class="p-0 m-0">+1 5589 55488 55s</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-8 col-12 col-sm-12">
+              <form>
+                <div class="row mt-4">
+                  <div class="col-6">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        placeholder="Your Name"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="Name"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="form-group">
+                      <input
+                        type="email"
+                        placeholder="Your Email"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="emailHelp"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        placeholder="Subject"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="subject"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-group mt-3">
+                      <textarea
+                        class="w-100"
+                        name="Message"
+                        placeholder="Message"
+                        rows="5"
+                      ></textarea>
+                    </div>
+                  </div>
+                  <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-warning">
+                      Send Message
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -1023,10 +1046,10 @@
       nav: true,
       responsive: {
         0: {
-          items: 1,
+          items: 2,
         },
         600: {
-          items: 3,
+          items: 2,
         },
         1000: {
           items: 8,
