--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="row">
           <div
             class="col-xl-6 col-sm-12"
-            data-aos="zoom-in-right"
+            data-aos="zoom-in"
             data-aos-duration="3000"
           >
             <h3>
@@ -212,7 +212,7 @@
           </div>
           <div
             class="col-xl-6 col-sm-12"
-            data-aos="zoom-in-left"
+            data-aos="zoom-in"
             data-aos-duration="3000"
           >
             <img
@@ -297,14 +297,14 @@
         <div class="row">
           <div
             class="col-xl-6 col-sm-12 w-100"
-            data-aos="zoom-in-left"
+            data-aos="zoom-in"
             data-aos-duration="3000"
           >
             <img class="img-feature" src="./Assests/img/features.jpg" alt="" />
           </div>
           <div
             class="col-xl-6 col-sm-12"
-            data-aos="zoom-in-left"
+            data-aos="zoom-in"
             data-aos-duration="3000"
           >
             <i class="fa fa-receipt size"></i>
@@ -511,7 +511,7 @@
           >
             <img
               class="padd"
-              data-aos="flip-right"
+              data-aos="flip-up"
               data-aos-duration="3000"
               src="./Assests/img/portfolio/portfolio-1.jpg"
               width="350px"
@@ -521,7 +521,7 @@
 
             <img
               class="padd"
-              data-aos="flip-left"
+              data-aos="flip-down"
               data-aos-duration="3000"
               src="./Assests/img/portfolio/portfolio-2.jpg"
               width="350px"
@@ -541,7 +541,7 @@
 
             <img
               class="padd"
-              data-aos="flip-right"
+              data-aos="flip-up"
               data-aos-duration="3000"
               src="./Assests/img/portfolio/portfolio-4.jpg"
               width="350px"
@@ -551,7 +551,7 @@
 
             <img
               class="padd"
-              data-aos="flip-left"
+              data-aos="flip-down"
               data-aos-duration="3000"
               src="./Assests/img/portfolio/portfolio-5.jpg"
               width="350px"
@@ -561,7 +561,7 @@
 
             <img
               class="padd"
-              data-aos="flip-right"
+              data-aos="flip-up"
               data-aos-duration="3000"
               src="./Assests/img/portfolio/portfolio-6.jpg"
               width="350px"
@@ -571,7 +571,7 @@
 
             <img
               class="padd"
-              data-aos="flip-left"
+              data-aos="flip-down"
               data-aos-duration="3000"
               src="./Assests/img/portfolio/portfolio-7.jpg"
               width="350px"
@@ -591,7 +591,7 @@
 
             <img
               class="padd"
-              data-aos="flip-right"
+              data-aos="flip-up"
               data-aos-duration="3000"
               src="./Assests/img/portfolio/portfolio-9.jpg"
               width="350px"
@@ -693,7 +693,7 @@
         <div class="row">
           <div
             class="col-xl-5 col-sm-12"
-            data-aos="fade-right"
+            data-aos="fade-up"
             data-aos-duration="3000"
           >
             <img class="img-counts" src="./Assests/img/counts-img.jpg" alt="" />
@@ -701,7 +701,7 @@
 
           <div
             class="col-xl-7 col-sm-12"
-            data-aos="fade-left"
+            data-aos="fade-down"
             data-aos-duration="3000"
           >
             <h2>Voluptatem dignissimos provident quasi</h2>
